<resources>
    <string name="app_name">Calculator</string>
    <string name="button_zero">0</string>
    <string name="button_sign">+/-</string>
    <string name="button_dot">.</string>
    <string name="button_result">=</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_label_add">+</string>
    <string name="button_label_subtract">-</string>
    <string name="button_label_multiply">×</string>
    <string name="button_label_divide">÷</string>
    <string name="button_label_delete">DEL</string>
    <string name="button_label_clear">C</string>
    <string name="button_label_clearentry">CE</string>
    <string name="result_initial_value">24</string>
    <string name="operation_inittial_value">4×6</string>
</resources>